--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,20 +1,22 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#">Soulmate Seeker</a>
-        <ul *ngIf="accountService.currentUser$ | async" class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Messages</a>
-          </li>
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active">Soulmate Seeker</a>
+        <ul  class="navbar-nav me-auto mb-2 mb-md-0">
+          <ng-container *ngIf="!!username">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+            </li>
+          </ng-container>
         </ul>
 
-        <div *ngIf="accountService.currentUser$ | async" class="dropdown" dropdown>
-            <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{ username }}</a>
+        <div *ngIf="!!username" class="dropdown" dropdown>
+            <a class="dropdown-toggle text-light" dropdownToggle style="text-decoration: none;">Welcome {{ username | titlecase }}</a>
             <div class="dropdown-menu mt-2" *dropdownMenu>
                 <a class="dropdown-item">Edit Profile</a>
                 <div class="dropdown-divider"></div>
@@ -22,7 +24,7 @@
             </div>
         </div>
 
-        <form #loginForm="ngForm" *ngIf="(accountService.currentUser$ | async) === null" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+        <form #loginForm="ngForm" *ngIf="!username" class="d-flex" (ngSubmit)="login()" autocomplete="off">
             <input 
                 [(ngModel)]="model.username"
                 name="username"
