--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -1,7 +1,7 @@
-<div class="row">
+<div *ngIf="!!member" class="row">
     <div class="col-4">
         <div class="card">
-            <img src="{{ member.photoUrl || './assets/user.png' }}" alt="{{ member.knownAs }}" class="card-img-top img-thumbnail">
+            <img src="{{ member.photoUrl || './assets/NoProfilePicture.jpg' }}" alt="{{ member.knownAs }}" class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
                     <strong>Location:</strong>
@@ -42,7 +42,10 @@
                 <p>{{ member.interests }}</p>
             </tab>
             <tab heading="Photos">
-                <p>Photos will go here</p>
+                <ngx-gallery *ngIf="member.photos.length > 0; else noPictures" [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
+                <ng-template #noPictures>
+                    <h1>No Pictures Uploaded</h1>
+                </ng-template>
             </tab>
             <tab heading="Messages">
                 <p>Messages will go here</p>
