--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -21,7 +21,7 @@
         <div *ngIf="!!username" class="dropdown" dropdown>
             <a class="dropdown-toggle text-light" dropdownToggle style="text-decoration: none;">Welcome {{ username | titlecase }}</a>
             <div class="dropdown-menu mt-2" *dropdownMenu>
-                <a class="dropdown-item">Edit Profile</a>
+                <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
